--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.show-sql=true
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
 spring.datasource.initialize=true
-spring.datasource.continue-on-error=true
+spring.sql.init.continue-on-error=true
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
